# EVA-Sample

./: Jenkinsfile  LICENSE  README.md  classifier_sample.py  dummy_box_sample.py  ex_application.c  meson.build
samples/: adyolo_sample.py  ex_appsrc_appsink.cpp  meson.build  meson_options.txt  pipeline_app.py  pipeline_app_call_python_plugin.py  plugin_sample.py  segment_sample.py
samples/b/: .ninja_deps  .ninja_log  appsrcsink  appsrcsink_ad  build.ninja  compile_commands.json  ex_app  getAdMetadata
samples/b/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-dependencies.json  intro-projectinfo.json  intro-targets.json  meson-info.json
samples/b/meson-logs/: meson-log.txt
samples/b/meson-private/: cmd_line.txt
scripts/: archive.sh  copy.sh  upload.sh
setups/: install.sh
src/: meson.build
src/Application/C-C++/generate-a-basic-pipeline/: generate-pipeline.c
src/Plugin/C_C++/video-filter/: adfiltertemplate.h
src/Plugin/Python/get-admetadata-from-pipeline/classification/: get-classification.py  gst_admeta.py
src/Plugin/Python/get-admetadata-from-pipeline/object-detection/: get-object-detection.py
src/Plugin/Python/get-stream-data-in-element/: get-stream-data.py
src/Plugin/Python/set-admetadata-to-pipeline/classification/: classifier_sample.py
src/Plugin/Python/set-admetadata-to-pipeline/detection/: dummy_box_sample.py
src/Plugin/Python/set-admetadata-to-pipeline/segmentation/: segment_sample.py
src/Plugin/Python/video-filter/: video-filter.py
src/Plugin/c-c++/: meson.build
src/Plugin/c-c++/get-admetadata-from-pipeline/: meson.build
src/Plugin/c-c++/get-admetadata-from-pipeline/classification/: adgetclassification.cpp  adgetclassification.h  meson.build
src/Plugin/c-c++/get-admetadata-from-pipeline/object-detection/: adgetobjectdetection.cpp  adgetobjectdetection.h  meson.build
src/Plugin/c-c++/get-stream-data-in-element/: adgetstreamdata.cpp  adgetstreamdata.h  meson.build
src/Plugin/c-c++/set-admetadata-to-pipeline/: meson.build
src/Plugin/c-c++/set-admetadata-to-pipeline/classification/: adsetclassification.h  meson.build  set_classification.cpp
src/Plugin/c-c++/set-admetadata-to-pipeline/object-detection/: adsetobjectdetection.h  meson.build  set_detection.cpp
src/Plugin/c-c++/video-filter/: adfiltertemplate.cpp  meson.build
src/application/: meson.build
src/application/Python/generate-a-basic-pipeline/: generate-a-basic-pipeline.py
src/application/Python/generate-a-basic-pipeline-in-opencv/: generate-a-basic-pipeline-in-opencv.py
src/application/Python/generate-a-pipeline-with-parse-launch/: generate-a-pipeline-with-parse-launch.py
src/application/Python/get-admetadata-from-pipeline/classification/: getAdMetadata-classification.py
src/application/Python/get-admetadata-from-pipeline/object-detection/: getAdMetadata-object-detection.py
src/application/Python/get-stream-data-from-pipeline/: get-stream-data-from-pipeline.py
src/application/Python/set-admetadata-in-pipeline/classification/: set_classification_in_pipeline.py
src/application/Python/set-admetadata-in-pipeline/detection/: set_detection_in_pipeline.py
src/application/c-c++/: meson.build
src/application/c-c++/generate-a-basic-pipeline/: generate-a-basic-pipeline.c  meson.build
src/application/c-c++/generate-a-basic-pipeline-in-opencv/: generate-a-basic-pipeline-in-opencv.cpp  meson.build
src/application/c-c++/get-admetadata-from-pipeline/: meson.build
src/application/c-c++/get-admetadata-from-pipeline/classification/: getAdMetadata-classification.cpp  meson.build
src/application/c-c++/get-admetadata-from-pipeline/object-detection/: getAdMetadata-object-detection.cpp  meson.build
src/application/c-c++/get-stream-data-from-pipeline/: get-stream-data-from-pipeline.cpp  meson.build
src/application/c-c++/set-admetadata-in-pipeline/classification/: meson.build  set_classification_in_pipeline.cpp
src/application/c-c++/set-admetadata-in-pipeline/object-detection/: meson.build  set_detection_in_pipeline.cpp
